# airsstack

./: .gitignore  AGENTS.md  Cargo.toml  README.md  WARP.md
crates/airs-mcp/: CHANGELOG.md  Cargo.toml  JOURNEY.md  MIGRATION.md  PERFORMANCE.md  README.md  VERSIONING.md
crates/airs-mcp-fs/: CHANGELOG.md  Cargo.toml  README.md
crates/airs-mcp-fs/docs/: book.toml
crates/airs-mcp-fs/docs/security/: enhanced_input_validation_security_audit_2025_08_29.md  github_issues_template_input_validation.md  input_validation_security_audit_2025_08_29.md  input_validation_test_results_2025_08_29.md
crates/airs-mcp-fs/docs/src/: SUMMARY.md  architecture.md  configuration.md  features.md  implementation.md  overview.md  performance.md  security.md  testing.md  usecases.md
crates/airs-mcp-fs/examples/: configuration_demo.rs
crates/airs-mcp-fs/examples/config/: development.toml  local.toml  production.toml  staging.toml
crates/airs-mcp-fs/src/: lib.rs  main.rs
crates/airs-mcp-fs/src/binary/: mod.rs  processor.rs
crates/airs-mcp-fs/src/config/: loader.rs  mod.rs  settings.rs  validation.rs
crates/airs-mcp-fs/src/filesystem/: operations.rs  validation.rs
crates/airs-mcp-fs/src/mcp/: message_handler.rs  mod.rs  server.rs  tools.rs  types.rs
crates/airs-mcp-fs/src/security/: approval.rs  audit.rs  manager.rs  mod.rs  permissions.rs  policy.rs
crates/airs-mcp-fs/tests/: configuration_validation_integration.rs  integration_security_audit.rs  phase2_integration.rs  security_input_validation_tests.rs  security_path_traversal_tests.rs
crates/airs-mcp/.agent_work/research/: advanced-jsonrpc-architecture.md
crates/airs-mcp/benches/: correlation_simple.rs  http_server_focused.rs  lightweight_benchmarks.rs  message_processing.rs  phase_3d_comprehensive.rs  streaming_performance.rs  transport_performance.rs
crates/airs-mcp/docs/: book.toml
crates/airs-mcp/docs/src/: SUMMARY.md  architecture.md  overview.md  plans.md  protocol.md  quality.md  usages.md
crates/airs-mcp/examples/: README.md  axum_server_with_handlers.rs  http_transport_usage.rs  mcp-inspector-oauth2-server.rs  mcp-inspector-test-server.rs  zero_cost_auth_server.rs
crates/airs-mcp/examples/http-apikey-client-integration/: .gitignore  Cargo.toml  README.md
crates/airs-mcp/examples/http-apikey-server-integration/: .gitignore  Cargo.toml  README.md  TESTING_SUMMARY.md
crates/airs-mcp/examples/http-oauth2-client-integration/: .gitignore  Cargo.toml  README.md
crates/airs-mcp/examples/http-oauth2-server-integration/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/airs-mcp/examples/mcp-http-remote-server/: Cargo.toml  README.md
crates/airs-mcp/examples/mcp-remote-server-apikey/: Cargo.toml  README.md
crates/airs-mcp/examples/mcp-remote-server-oauth2/: Cargo.toml  README.md  bearer_token.txt  current_bearer_token.txt  fresh_bearer_token.txt  oauth2_token.txt  token_response.json
crates/airs-mcp/examples/oauth2-integration/: Cargo.toml
crates/airs-mcp/examples/simple-mcp-client/: Cargo.toml  README.md  test_client.sh
crates/airs-mcp/examples/simple-mcp-server/: .gitignore  Cargo.toml  README.md  STDIO_TESTING.md  TESTING.md  claude_config.template.json
crates/airs-mcp/examples/stdio-client-integration/: .gitignore  Cargo.toml  README.md
crates/airs-mcp/examples/stdio-server-integration/: Cargo.toml  README.md
crates/airs-mcp/examples/tier_examples/: README.md  tier1_zero_configuration.rs  tier2_basic_configuration.rs  tier3_advanced_configuration.rs  tier4_expert_async.rs
crates/airs-mcp/spec/: core-implementation-plan.md  requirements.md  tasks.md
crates/airs-mcp/src/: lib.rs
crates/airs-mcp/src/authentication/: context.rs  error.rs  manager.rs  metadata.rs  method.rs  mod.rs  request.rs  strategy.rs
crates/airs-mcp/src/authorization/: context.rs  error.rs  extractor.rs  middleware.rs  mod.rs  policy.rs
crates/airs-mcp/src/base/: mod.rs
crates/airs-mcp/src/correlation/: error.rs  manager.rs  mod.rs  types.rs
crates/airs-mcp/src/integration/: client.rs  constants.rs  error.rs  handler.rs  mod.rs  router.rs  server.rs
crates/airs-mcp/src/integration_legacy_backup/: README.md  client.rs  error.rs  handler.rs  mod.rs  router.rs  server.rs
crates/airs-mcp/src/oauth2/: config.rs  context.rs  error.rs  jwt_validator.rs  metadata.rs  middleware.rs  middleware_complex.rs  middleware_simple.rs  mod.rs  scope_validator.rs  types.rs
crates/airs-mcp/src/protocol/: constants.rs  errors.rs  message.rs  mod.rs  transport.rs  types.rs
crates/airs-mcp/src/providers/: logging.rs  mod.rs  prompt.rs  resource.rs  tool.rs
crates/airs-mcp/src/shared/: mod.rs
crates/airs-mcp/src/transport/: buffer.rs  error.rs  mcp.rs  mod.rs  stdio.rs  streaming.rs  traits.rs  zero_copy.rs
crates/airs-mcp/tests/: auth_middleware_integration.rs  authorization_integration.rs  concurrent_integration.rs  http_streamable_get_integration.rs  http_transport_integration.rs  mcp_ecosystem_tests.rs  sse_integration_tests.rs
crates/airs-mcp/tests/integration/: oauth2_jsonrpc_http.rs
crates/airs-memspec/: Cargo.toml  README.md
crates/airs-memspec/docs/: book.toml
crates/airs-memspec/examples/: debug_workspace_data.rs  layout_demo.rs  navigation_demo.rs  test_markdown_parser.rs
crates/airs-memspec/src/: lib.rs  main.rs
crates/airs-memspec/tests/: context_integration_tests.rs  error_handling_tests.rs
examples/simple-mcp-server/: Cargo.toml  test_client.py  test_manual.sh  test_server.py  test_simple.sh
examples/simple-mcp-server/src/: main.rs
mcp-servers/airs-mcpserver-fs/: CHANGELOG.md  CONFIGURATION.md  Cargo.toml  MIGRATION.md  README.md  SECURITY_AUDIT.md
mcp-servers/airs-mcpserver-fs/docs/: book.toml
mcp-servers/airs-mcpserver-fs/examples/: configuration_demo.rs
mcp-servers/airs-mcpserver-fs/src/: lib.rs  main.rs  main_old.rs
mcp-servers/airs-mcpserver-fs/tests/: configuration_validation_integration.rs  integration_security_audit.rs  path_validation_debug.rs  phase2_integration.rs  security_input_validation_tests.rs  security_path_traversal_tests.rs
(+807 files in other folders)
