[workspace]
members = [
    "crates/airs-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/rstlix0x0/airs"
rust-version = "1.70"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
futures = { version = "0.3" }

# JSON serialization for JSON-RPC messages
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Concurrent collections for request correlation
dashmap = { version = "5.5" }

# Error handling (structured, type-safe)
thiserror = { version = "1.0" }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = { version = "1.5" }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1" }

[workspace.dev-dependencies]
# Async testing utilities - ACTUAL VERSION THAT EXISTS
tokio-test = { version = "0.4" }
# Property-based testing
proptest = { version = "1.4" }
# Test logging setup
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Performance benchmarking
criterion = { version = "0.5", features = ["html_reports"] }