[workspace]
members = [
    "crates/airs-mcp", 
    "crates/airs-memspec",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rstlix0x0 <rstlix.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/rstlix0x0/airs"
rust-version = "1.88"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.47", features = ["full"] }
futures = { version = "0.3" }

# JSON serialization for JSON-RPC messages
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Concurrent collections for request correlation
dashmap = { version = "5.5" }

# Error handling (structured, type-safe)
thiserror = { version = "1.0" }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = { version = "1.5" }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1" }

# Async trait support
async-trait = { version = "0.1.88" }

# HTTP server and middleware (for HTTP Streamable Transport)
axum = { version = "0.8.4", features = ["ws"] }
hyper = { version = "1.6.0", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

# Connection pooling (for HTTP transport)
deadpool = { version = "0.12" }

# Provider implementation dependencies (latest stable)
regex = { version = "1.11.1" }

# CLI framework (latest stable)
clap = { version = "4.5", features = ["derive", "help", "usage", "error-context"] }

# YAML parsing (modern replacement for deprecated serde_yaml)
serde_yml = { version = "0.0.12" }

# Markdown parsing (latest stable)
pulldown-cmark = { version = "0.13" }

# Enhanced error handling (latest stable)
anyhow = { version = "1.0.98" }

# Logging for examples
env_logger = { version = "0.11" }

# File system operations (latest stable)
walkdir = { version = "2.5" }

# Terminal output (latest stable - major update)
colored = { version = "3.0" }

# Text formatting utilities (latest stable)
unicode-width = { version = "0.2" }
terminal_size = { version = "0.4" }

# Standard directories (latest stable - major update)
dirs = { version = "6.0" }

# Date/time handling (latest stable)
chrono = { version = "~0.4", features = ["serde"] }

# Testing and development utilities
# Async testing utilities - ACTUAL VERSION THAT EXISTS
tokio-test = { version = "0.4" }
# Property-based testing
proptest = { version = "1.4" }
# Test logging setup
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Performance benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# CPU count detection for benchmarks
num_cpus = { version = "1.16" }

# Testing utilities (latest stable)
tempfile = { version = "3.20.0" }
assert_cmd = { version = "2.0.17" }
predicates = { version = "3.1" }
