[package]
name = "airs-mcp-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# AIRS Foundation
airs-mcp.workspace = true

# Core runtime (workspace managed)
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true

# MCP-FS specific dependencies (workspace managed)
image.workspace = true
infer.workspace = true
config.workspace = true
toml.workspace = true
path-clean.workspace = true
glob.workspace = true
walkdir.workspace = true
regex.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
assert_fs.workspace = true
