[package]
name = "airs-mcp-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# AIRS Foundation
airs-mcp.workspace = true

# Core runtime (workspace managed)
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
base64.workspace = true
globset.workspace = true

# MCP-FS specific dependencies (workspace managed)
image.workspace = true
infer.workspace = true
config.workspace = true
toml.workspace = true
path-clean.workspace = true
glob.workspace = true
walkdir.workspace = true
regex.workspace = true

[dev-dependencies]
# Testing framework (workspace managed)
tokio-test.workspace = true
assert_fs.workspace = true
tempfile.workspace = true

# Time handling (workspace managed)
chrono.workspace = true

# Security testing dependencies (workspace managed)
urlencoding.workspace = true
unicode-normalization.workspace = true
