[package]
name = "airs-mcp"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Model Context Protocol implementation with JSON-RPC 2.0 foundation"
keywords = ["mcp", "jsonrpc", "protocol", "rpc"]
categories = ["network-programming", "api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/airs-mcp"
homepage = "https://github.com/rstlix0x0/airs/tree/main/crates/airs-mcp"


[dependencies]
# Core serialization for JSON-RPC messages (current implementation needs)
serde.workspace = true
serde_json.workspace = true

# Future dependencies (now enabled for development and future use)
tokio.workspace = true
futures.workspace = true
dashmap.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
tokio-util.workspace = true
tracing.workspace = true
async-trait.workspace = true

# HTTP transport dependencies (for HTTP Streamable Transport)
axum.workspace = true
hyper.workspace = true
tower.workspace = true
tower-http.workspace = true
deadpool.workspace = true
reqwest.workspace = true

# Provider implementation dependencies (inherited from workspace)
regex.workspace = true
serde_yml.workspace = true

# OAuth 2.1 authentication dependencies (inherited from workspace)
jsonwebtoken.workspace = true
oauth2.workspace = true
base64.workspace = true
url.workspace = true

[dev-dependencies]
# Async testing utilities for correlation manager testing
tokio-test.workspace = true

# Property-based testing for concurrency scenarios  
proptest.workspace = true

# Performance benchmarking for correlation latency
criterion.workspace = true

# Test logging and debugging for async flows
tracing-subscriber.workspace = true

# Temporary file/directory creation for tests (inherited from workspace)
tempfile.workspace = true

# Benchmark dependencies
chrono.workspace = true
num_cpus.workspace = true

[[bench]]
name = "message_processing"
harness = false

[[bench]]
name = "streaming_performance"
harness = false

[[bench]]
name = "correlation_simple"
harness = false

[[bench]]
name = "transport_performance"
harness = false

[[bench]]
name = "http_server_focused"
harness = false
