[package]
name = "airs-mcp"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Model Context Protocol implementation with JSON-RPC 2.0 foundation"
keywords = ["mcp", "jsonrpc", "protocol", "rpc"]
categories = ["network-programming", "api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/airs-mcp"
homepage = "https://github.com/airsstack/airsstack/tree/main/crates/airs-mcp"


[dependencies]
# Core serialization for JSON-RPC messages (current implementation needs)
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
urlencoding.workspace = true

# Future dependencies (now enabled for development and future use)
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
dashmap.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
tokio-util.workspace = true
tracing.workspace = true
async-trait.workspace = true

# HTTP transport dependencies (for HTTP Streamable Transport)
axum.workspace = true
hyper.workspace = true
tower.workspace = true
tower-http.workspace = true
deadpool.workspace = true
reqwest.workspace = true

# Provider implementation dependencies (inherited from workspace)
regex.workspace = true
serde_yml.workspace = true

# OAuth 2.1 authentication dependencies (inherited from workspace)
jsonwebtoken.workspace = true
oauth2.workspace = true
base64.workspace = true
url.workspace = true

# Logging for examples and utilities
tracing-subscriber.workspace = true

# File system utilities for examples
tempfile.workspace = true

# CLI framework for examples
clap.workspace = true

# Cryptographic dependencies for OAuth2 examples
rsa.workspace = true
sha2.workspace = true

[dev-dependencies]
# Async testing utilities
tokio-test.workspace = true

# Property-based testing for concurrency scenarios  
proptest.workspace = true

# Performance benchmarking
criterion.workspace = true

# HTTP mocking for JWT validation tests
wiremock.workspace = true

# Benchmark dependencies
chrono.workspace = true
num_cpus.workspace = true

[[bench]]
name = "message_processing"
harness = false

[[bench]]
name = "lightweight_benchmarks"
harness = false
