[package]
name = "airs-memspec"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# Publishing metadata
description = "Streamline AI-assisted development with Multi-Project Memory Bank management and GitHub Copilot integration"
keywords = ["cli", "copilot", "memory-bank", "ai", "workspace"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
readme = "README.md"
documentation = "https://docs.rs/airs-memspec"
homepage = "https://github.com/rstlix0x0/airs/tree/main/crates/airs-memspec"

# Binary target for CLI installation
[[bin]]
name = "airs-memspec"
path = "src/main.rs"

[dependencies]
# Core async runtime (from workspace with specific features)
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }

# Serialization (from workspace)
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling (from workspace)
thiserror = { workspace = true }
anyhow = { workspace = true }

# CLI framework (from workspace)
clap = { workspace = true }

# YAML parsing (from workspace)
serde_yml = { workspace = true }

# Markdown parsing (from workspace)
pulldown-cmark = { workspace = true }

# File system operations (from workspace)
walkdir = { workspace = true }

# Terminal output and formatting (from workspace)
colored = { workspace = true }
unicode-width = { workspace = true }
terminal_size = { workspace = true }

# Standard directories (from workspace)
dirs = { workspace = true }

# Date/time handling (from workspace)
chrono = { workspace = true }

[dev-dependencies]
# Testing utilities (from workspace)
tokio-test = { workspace = true }
proptest = { workspace = true }

# CLI and filesystem testing (from workspace)
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
