[package]
name = "simple-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
airs-mcp = { path = "../../crates/airs-mcp" }
tokio = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
