[package]
name = "airs-mcpserver-fs"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Security-first MCP filesystem server enabling Claude Desktop and AI tools to safely read, write, and manage local files with human-in-the-loop approval workflows"
keywords = ["mcp", "filesystem", "claude", "ai-tools", "security"]
categories = ["network-programming", "api-bindings", "filesystem"]
readme = "README.md"
documentation = "https://docs.rs/airs-mcpserver-fs"
homepage = "https://github.com/airsstack/airsstack/tree/main/mcp-servers/airs-mcpserver-fs"

[lints]
workspace = true

[dependencies]
# AIRS Foundation
airs-mcp = { version = "0.2.3", path = "../../crates/airs-mcp" }

# Core runtime (workspace managed)
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
base64.workspace = true
globset.workspace = true

# MCP-FS specific dependencies (workspace managed)
image.workspace = true
infer.workspace = true
config.workspace = true
toml.workspace = true
path-clean.workspace = true
glob.workspace = true
walkdir.workspace = true
regex.workspace = true
clap.workspace = true

# Security dependencies (workspace managed)
urlencoding.workspace = true
unicode-normalization.workspace = true
dirs.workspace = true

[dev-dependencies]
# Testing framework (workspace managed)
tokio-test.workspace = true
assert_fs.workspace = true
tempfile.workspace = true

# Time handling (workspace managed)
chrono.workspace = true

# Security testing dependencies (workspace managed)
urlencoding.workspace = true
unicode-normalization.workspace = true

[[bin]]
name = "airs-mcpserver-fs"
path = "src/main.rs"
