[package]
name = "http-apikey-client-integration"
version = "0.1.0"
edition = "2021"
description = "HTTP MCP client integration example with API key authentication and lightweight mock server"

# Exclude from workspace to allow independent dependency management
[workspace]

[[bin]]
name = "http-apikey-client"
path = "src/main.rs"

[[bin]]
name = "http-mock-server"
path = "src/mock_server/main.rs"

[dependencies]
# AIRS Foundation Crates (Priority ยง5.1)
airs-mcp = { path = "../../" }

# Core Runtime Dependencies
tokio = { version = "1.47", features = ["full"] }
futures = { version = "0.3" }

# HTTP and Serialization
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Server Framework (for mock server)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Configuration and CLI
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
toml = "0.8"

# Logging and Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time Management (Workspace Standard ยง3.2)
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Development Dependencies
[dev-dependencies]
tempfile = "3.0"
wiremock = "0.6"