[package]
name = "http-apikey-server-integration"
version = "0.1.0"
edition = "2021"
description = "HTTP API Key Server Integration Example - Complete MCP server with API key authentication"
license = "MIT OR Apache-2.0"

[workspace]
# Empty workspace directive to exclude from root workspace

[[bin]]
name = "http-apikey-server"
path = "src/main.rs"

[dependencies]
# AIRS Foundation Crates (Layer 1)
airs-mcp = { path = "../../" }

# Core Runtime Dependencies (Layer 2)
tokio = { version = "1.47", features = ["full"] }
async-trait = { version = "0.1.89" }

# Web Framework Dependencies (Layer 3)
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Data & Serialization (Layer 4)
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Time Dependencies (Layer 5)
chrono = { version = "0.4", features = ["serde"] }

# Network & Command Line (Layer 6)
clap = { version = "4.0", features = ["derive"] }

# Logging & Tracing (Layer 7)
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# System Dependencies (Layer 8)
uuid = { version = "1.6", features = ["v4", "serde"] }
tempfile = { version = "3.8" }