[package]
name = "mcp-http-remote-server"
version = "0.1.0"
edition = "2021"
description = "Complete MCP HTTP Remote Server implementation following MCP specification"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
# AIRS Foundation Crates (Priority per workspace standards ยง5.1)
airs-mcp = { path = "../../" }

# Core Runtime Dependencies
tokio = { version = "1.35", features = ["full"] }
futures = { version = "0.3" }

# JSON and Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Time Management (Per workspace standards ยง3.2)
chrono = { version = "0.4", features = ["serde"] }

# Async Runtime
async-trait = { version = "0.1.88" }

# Logging and Tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = { version = "0.2" }

# Error Handling
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }

# File system operations
walkdir = { version = "2.3" }

[[bin]]
name = "mcp-http-remote-server"
path = "src/main.rs"
