[package]
name = "mcp-remote-server-apikey"
version = "0.1.0"
edition = "2021"
description = "Simple ApiKey-based MCP remote server demonstrating straightforward authentication"
authors = ["AirsStack Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/airsstack/airsstack"

# Exclude from parent workspace
[workspace]

[dependencies]
# AirsStack MCP library
airs-mcp = { path = "../../" }

# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server framework
axum = { version = "0.7", features = ["json", "macros", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }

# File utilities
tempfile = "3.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Async traits
async-trait = "0.1"

[[bin]]
name = "mcp-remote-server-apikey"
path = "src/main.rs"
