[package]
name = "mcp-remote-server-oauth2"
version = "0.1.0"
edition = "2021"
description = "Production-ready OAuth2 MCP remote server demonstrating zero-cost authorization architecture"
authors = ["AirsStack Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/airsstack/airsstack"

# Exclude from parent workspace
[workspace]

[dependencies]
# AirsStack MCP library (no features needed - everything is included)
airs-mcp = { path = "../../" }

# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server framework
axum = { version = "0.7", features = ["json", "macros", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# OAuth2 and JWT
jsonwebtoken = "9.3"
url = "2.5"

# RSA key generation for demo
rsa = "0.9"
num-bigint-dig = "0.8"
rand = "0.8"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
tempfile = "3.0"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for testing
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "mcp-remote-server-oauth2"
path = "src/main.rs"
