[package]
name = "simple-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/rstlix0x0/airs"
rust-version = "1.70"
description = "Simple MCP server example demonstrating airs-mcp usage"

[workspace]

[[bin]]
name = "simple-mcp-server"
path = "src/main.rs"

[[bin]]
name = "minimal-test-server"
path = "src/minimal_test.rs"

[dependencies]
airs-mcp = { path = "../.." }
tokio = { version = "1.35", features = ["full"] }
serde_json = { version = "1.0" }

# Professional logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
env_logger = { version = "0.11" }
async-trait = { version = "0.1.88" }
