[workspace]
# Empty workspace directive to exclude from root workspace

[package]
name = "stdio-server-integration"
version = "0.1.0"
edition = "2021"
description = "STDIO Server Integration Example - Complete MCP server using STDIO transport"
license = "MIT OR Apache-2.0"

[[bin]]
name = "stdio-server"
path = "src/main.rs"

[dependencies]
# AIRS Foundation Crates (Layer 1)
airs-mcp = { path = "../../" }

# Core Runtime Dependencies (Layer 2)
tokio = { version = "1.47", features = ["full"] }
async-trait = { version = "0.1.88" }

# Serialization Dependencies (Layer 3)
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Time and Logging Dependencies (Layer 4)
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# System Dependencies (Layer 5)
uuid = { version = "1.6", features = ["v4", "serde"] }
tempfile = { version = "3.8" }